# wall-e

./: .gitignore  README.md  Taskfile.yml  manage.py  pyproject.toml
src/wall_e/: main.py
src/wall_e/services/: wall-eV3.py  wall_e.py  wall_eV2.py  wall_eV3.py  wall_eV4.py
src/wall_e/utils/: compare.py  utilCompare.py
walle/: asgi.py  settings.py  urls.py  utilCompare.py  wall-e.py  wall-eV2.py  wall-eV3.py  wsgi.py
